--- a/source/_posts/微服务化-数据库如何进行拆分.md
+++ b/source/_posts/微服务化-数据库如何进行拆分.md
@@ -342,3 +342,5 @@ class ProductPricingService…
 第一次进行这项工作时，会有很多痛苦，也会受到很多教训，这都会让你的下一次拆分更加顺利。初次拆分过程中，不管面对多大诱惑，都最好不要尝试合并这些步骤。一次只进行一步，让整个工作流程更少悬念，更多的安全感和可预测性。在成功掌握这一模式之后，就可以根据自身所学对这些步骤进行优化了。
 
 祝你好运！
+
+点击链接加入群聊【济南微服务架构交流圈】：https://jq.qq.com/?_wv=1027&k=UtbHu5qA
